--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-sm-8">
           <div class="jumbotron">
-            <h1>This is great pugalenthisekaran</h1>
+            <h1>This is great pugalenthi</h1>
             <p>Welcome to templating using EJS</p>
           </div>
         </div>
