--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -11,7 +11,7 @@
         <div class="col-sm-8">
           <div class="jumbotron">
             <h1>This is great pugalenthi</h1>
-            <p>Welcome to templating using EJS</p>
+            <p>Welcome to templating using EJS and EXPRESS</p>
           </div>
         </div>
 
